--- a/src/styles.css
+++ b/src/styles.css
@@ -178,3 +178,10 @@ button
     min-height: 500px;
     min-width: 650px;
 }
+#bg
+{
+    width : 100%;
+    height : 10%;
+    max-height: 800px;
+    filter : brightness(60%);
+}
