--- a/src/styles.css
+++ b/src/styles.css
@@ -99,7 +99,7 @@ button
     width: 100%;
 }
 
-#about_us_text
+#about_us_text , #contactUsTitle
 {
     position: absolute;
     top: 50%;
@@ -112,13 +112,16 @@ button
     max-width: 80%;
 }
 
-#about_us_text h1
+#about_us_text h1 , #contactUsTitle h1
 {
     margin-bottom: 20px;
     font-size: 2.5em;
     text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.8);
 }
-
+#contactUsTitle
+{
+    font-size: 75px;
+}
 #about_us_text p
 {
     font-size: 1.2em;
@@ -178,10 +181,69 @@ button
     min-height: 500px;
     min-width: 650px;
 }
-#bg
+#bg , #contactUsBackground
 {
     width : 100%;
-    height : 10%;
     max-height: 800px;
     filter : brightness(60%);
+}
+#bg
+{
+    height : 10%;
+}
+#contactUsBackground
+{
+    height: 5%;
+    max-height: 700px;
+}
+#test
+{
+    height: 100px;
+}
+#contactUsForm
+{
+    display: flex;
+    flex-direction: column;
+    width: 40%;
+    height: 50%;
+    min-height: 300px;
+    margin-top: 50%;
+    padding: 1%;
+    justify-content: center;
+    margin: auto;
+    background-color: #131313;
+    border-radius: 20px;
+    border: 2px ridge orange;
+    gap: 10px;
+}
+#formSubmitBtn
+{
+    width: 100px;
+    background-color: orange;
+    border: none;
+    margin-top: 5%;
+}
+input
+{
+    color: black;
+    background-color: rgb(54, 54, 54);
+    border: none;
+    padding: 10px;
+}
+#upperFormPart
+{
+    display: flex;
+    gap: 50px;
+}
+#formName , #formEmail , #formSubject , #formComment
+{
+    display: flex;
+    flex-direction: column;
+    gap: 10px;
+    border: none;
+}
+#comments
+{
+    text-align: start;
+    height: 75px;
 }
