--- a/src/styles.css
+++ b/src/styles.css
@@ -157,21 +157,29 @@ hr
     transform: translateY(0);
 }
 
-#sections {
+.dish-container {
+    opacity: 0;
+    transform: translateY(20px);
+    transition: opacity 1s ease-in-out, transform 1s ease-in-out;
+}
+.dish-container.loaded {
     opacity: 1;
     transform: translateY(0);
 }
 
-.dish-container, .dish-name, .dish-description, .dish-price, #contactUsTitle, #formTitle, #upperFormPart, #middleFormPart, #downFormPart {
-  opacity: 0;
-  transform: translateY(30px);
-  transition: opacity 0.6s ease, transform 0.6s cubic-bezier(0.22, 1, 0.36, 1);
+#upperFormPart, #middleFormPart, #downFormPart, #contactUsForm h2 {
+    opacity: 0;
+    transform: translateY(20px);
+    transition: opacity 1s ease-in-out, transform 1s ease-in-out;
+}
+#upperFormPart.loaded, #middleFormPart.loaded, #downFormPart.loaded, #contactUsForm h2.loaded {
+    opacity: 1;
+    transform: translateY(0);
 }
 
-.dish-container.loaded, .dish-name.loaded, .dish-description.loaded, .dish-price.loaded,
-#contactUsTitle.loaded, #formTitle.loaded, #upperFormPart.loaded, #middleFormPart.loaded, #downFormPart.loaded {
-  opacity: 1;
-  transform: translateY(0);
+#sections {
+    opacity: 1;
+    transform: translateY(0);
 }
 
 #menuDishes
